--- a/hotel.html
+++ b/hotel.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Booking App</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
     <h1>Hotel Booking App</h1>
 
@@ -25,4 +30,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
