--- a/hotel.html
+++ b/hotel.html
@@ -6,29 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Booking App</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="../cs3-q4-proj/css/styles.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="../cs3-q4-proj/img/app_favicon.png">
 </head>
 
 <body>
-    <h1>Hotel Booking App</h1>
+    <header>
+        <div>
+            <div id="logo">
+                <img src="../cs3-q4-proj/img/app_logo.png" height="130px" width="130px" />
+            </div>
+            <div id="text">
+                <h1>PAPA Hotel Booking App</h1>
+                <h3>by Pereira, Aguja, Paras, & Aquinto</h3>
+            </div>
+        </div>
+    </header>
+    <section>
+        <article>
+            <form id="searchForm">
+                <label for="destination">Destination:</label>
+                <input type="text" id="destination" required>
 
-    <form id="searchForm">
-        <label for="destination">Destination:</label>
-        <input type="text" id="destination" required>
+                <label for="checkIn">Check-in Date:</label>
+                <input type="date" id="checkIn" required>
 
-        <label for="checkIn">Check-in Date:</label>
-        <input type="date" id="checkIn" required>
+                <label for="checkOut">Check-out Date:</label>
+                <input type="date" id="checkOut" required>
 
-        <label for="checkOut">Check-out Date:</label>
-        <input type="date" id="checkOut" required>
+                <button type="submit">Search</button>
+            </form>
 
-        <button type="submit">Search</button>
-    </form>
+            <div id="results"></div>
+            <div class="background-transition"></div>
 
-    <div id="results"></div>
-    <div class="background-transition"></div>
-
-    <script src="script.js"></script>
+            <script src="../cs3-q4-proj/src/script.js"></script>
+        </article>
+    </section>
 </body>
 
 </html>
