--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Booking App</title>
-    <link rel="stylesheet" type="text/css" href="../cs3-q4-proj/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../cs3-q4-proj/css/index.css">
     <link rel="icon" type="image/png" sizes="32x32" href="../cs3-q4-proj/img/app_favicon.png">
 </head>
 
@@ -69,7 +69,7 @@
 
             <div id="display"></div>
 
-            <script src="../cs3-q4-proj/src/script.js"></script>
+            <script src="../cs3-q4-proj/src/index.js"></script>
         </article>
     </section>
 </body>
